--- a/.github/workflows/generate-laliga-ip-list.yml
+++ b/.github/workflows/generate-laliga-ip-list.yml
@@ -2,12 +2,18 @@ name: Generate IP Whitelist (LaLiga)
 
 on:
   schedule:
-    - cron: '0 6,18 * * *'   # 06:00/18:00 UTC
-  workflow_dispatch:       # Allows manual execution as well
+    - cron: '0 1,13 * * *'   # 06:00 and 18:00 UTC
+  workflow_dispatch:         # Allows manual execution as well
+
+permissions:
+  contents: write            # 🔐 Required for pushing changes
 
 jobs:
   whitelist:
     runs-on: ubuntu-latest
+
+    env:
+      DATA_URL: https://hayahora.futbol/estado/data.json  # ✅ Define it once at job level
 
     steps:
       - name: Checkout repository
@@ -17,10 +23,7 @@ jobs:
         run: sudo apt-get install -y jq curl
 
       - name: Download JSON and generate whitelist
-        env:
-          DATA_URL: https://hayahora.futbol/estado/data.json
         run: |
-          URL="https://hayahora.futbol/estado/data.json"
           curl -s "$DATA_URL" | jq -r '.data[].ip' | sort -u > laliga_ip_list.lst
 
           echo "Contents of laliga_ip_list.lst:"
@@ -38,5 +41,3 @@ jobs:
           else
             echo "No changes to commit."
           fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
